--- a/1examenLabo4/src/index.html
+++ b/1examenLabo4/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <div class="fondoDepantalla"> 
+  
   <meta charset="utf-8">
   <title>examenlabo</title>
   <base href="/">
@@ -9,5 +11,5 @@
 </head>
 <body>
   <app-root></app-root>
-</body>
+</body></div>
 </html>
